update mvcc to stop creating new version chains on each call